--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "multer": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-  "start": "node server.js"
-  }
+"scripts": {
+  "start": "node src/index.js"
+}
+
 }
